tests/check/illegal_mdspan.co
// RUN: not choreo %s 2>&1 | FileCheck %s

__co__ auto illegal_mdspan(f32 [?] a) {
  mds0 : [7, 8]; // ok
  mdspan mds1 : {7, 8};  // must use '[]'
  mdspan<1> mds2 : [7, 8];  // rank inconsistence
  mdspan<5> mds3 : [7, 8];  // rank inconsistence
  mdspan mds4 : [2, 3, 4];  // annotation ok

  // valno.cpp:567: Assertion failed: failed to get value number of signature "index_const_3".
  // Should the message be error?
  // mds : [mds0(0), mds0(1), mds0(3)];

  parallel p by 2 {
    with idx = {x, y, z} in [1, 2, 3] {
      mds5 : [ true, a, {1, 2}, [4], idx, p, x, y, z ];
      mds6 : [ a.span ];
      mds7 : [ mds0(0), mds0(1) ];
    }
  }

  mdspan mds8 : [0, -1, 5]; // must be positive

  with t in [0, 1]  {}

}

// CHECK-NOT: error:{{.*}}mds0{{.*}}
// CHECK: error: `mds1' is declared as "mdspan<> []" but initialized as "ituple<2>".
// CHECK: error: `mds2' is declared as "mdspan<1> []" but initialized as "mdspan<2> []".
// CHECK: error: `mds3' is declared as "mdspan<5> []" but initialized as "mdspan<2> []".
// CHECK-NOT: error:{{.*}}mds4{{.*}}
// CHECK: error: unexpected data type 'bool' is found in mdspan.
// CHECK: error: unexpected data type 'f32 mdspan<1> []' is found in mdspan.
// CHECK: error: The mdspan size "0" is invalid!
// CHECK: error: The mdspan size "-1" is invalid!
// CHECK: error: The mdspan size "0" is invalid!
// CHECK: Totally 8 errors have been detected.

